# Learn

./: README.md
.obsidian/: app.json  appearance.json  community-plugins.json  (+1 more)
Program File/CPP/Cmake/: CMake.md  CMakeLists.txt
Program File/CPP/Cmake/cmake_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Makefile  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compile_commands.json  engine.sln  engine.vcxproj  engine.vcxproj.filters  main.vcxproj
Program File/CPP/Cmake/cmake_build/3rdlibs/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
Program File/CPP/Cmake/cmake_build/Debug/: engine.lib
Program File/CPP/Cmake/cmake_build/Testing/: TAG
Program File/CPP/Cmake/cmake_build/test/: CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cgmath.vcxproj  cgmath.vcxproj.filters  cmake_install.cmake
Program File/CPP/Cmake/include/: engine.hpp
Program File/CPP/Cmake/include/core/: cgmath.hpp
Program File/CPP/Cmake/src/: main.cpp
Program File/CPP/Cmake/test/: CMakeLists.txt  catch.hpp  cgmath.cpp
(+166 files in other folders)
